[package]
name = "ecu_engine"
version = "0.1.0"
edition = "2024"
publish = ["kellnr"]

[dependencies]
ecu_engine_messages = { path = "./ecu_engine_messages", version = "=0.1.1", registry = "kellnr" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

[workspace]
members = ["ecu_engine_messages"]
